[tool.poetry]
name = "coding-challenge-note"
version = "0.1.0"
description = ""
authors = ["xkumiyu <xkumiyu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.3.0"
mkdocs-material = "^8.2.9"
pymdown-extensions = "^9.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^22.3.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
